# homelab

./: .ansible-lint  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  IMPLEMENTATION_GUIDE.md  MONOREPO_BUILD_RELEASE_PLAN.md  README.md  REFACTOR_SUMMARY.md  SHUTDOWN_PROCEDURE.md  TASKFILE_CHANGES.md  Taskfile.yml  docker-compose.yaml  homelab.sh  homelab.yaml.example  llms.txt  mkdocs.yml  pyproject.toml  setup.sh
stacks/apps/fiber/app/: Dockerfile  package-lock.json  package.json  pyproject.toml  vitest.config.js
stacks/apps/fiber/app/fiber/: bristol.py  config.py  container.py  labels.py  logger.py  loop.py  main.py  metrics.py  plunger.py  registry.py  scheduler.py  status.py  view.py
stacks/apps/fiber/app/fiber/clients/: bowl.py  container.py  discovery.py  dump_runner.py  events.py  probe.py  secrets.py  swarm.py
stacks/apps/fiber/app/fiber/clients/engines/: __init__.py  base.py  mysql.py  postgres.py
stacks/apps/fiber/app/fiber/db/: database.py  models.py
stacks/apps/fiber/app/fiber/domain/: dumps.py  jobs.py  models.py  schedule.py  status.py  view.py
stacks/apps/fiber/app/fiber/platform/: config.py  metrics.py
stacks/apps/fiber/app/fiber/repositories/: history.py
stacks/apps/fiber/app/fiber/routes/: __init__.py  dashboard.py  health.py
stacks/apps/fiber/app/fiber/services/: dashboard.py  orchestrator.py  readiness.py  registry_state.py  worker_pool.py
stacks/apps/fiber/app/fiber/static/: fiber.css  tiles.js  wall.js
stacks/apps/fiber/app/fiber/templates/: _discovery.html  _drawer.html  _probe_result.html  _summary.html  _tile.html  base.html  wall.html
stacks/apps/fiber/app/tests/: factories.py
stacks/apps/fiber/app/tests/e2e/: compose.yml  run-e2e.sh  seed.sql  test_dump_restore.py
stacks/apps/fiber/app/tests/frontend/: tiles.test.js
stacks/apps/fiber/app/tests/integration/: conftest.py  test_bowl.py  test_dashboard_render.py  test_dump_runner.py  test_history.py  test_movement_e2e.py  test_mysql_dump.py  test_web.py
stacks/apps/fiber/app/tests/unit/: test_bristol.py  test_clock.py  test_config.py  test_container_selector.py  test_labels.py  test_logger.py  test_loop.py  test_main.py  test_metrics.py  test_models.py  test_plunger.py  test_registry.py  test_scheduler.py  test_smoke.py  test_status.py  test_view.py
stacks/apps/fiber/app/tests/unit/clients/: test_bowl.py  test_container.py  test_discovery.py  test_dump_runner.py  test_events.py  test_probe.py  test_secrets.py  test_swarm.py
stacks/apps/fiber/app/tests/unit/domain/: test_dumps.py  test_jobs.py  test_models.py  test_schedule.py  test_status.py  test_view.py
stacks/apps/fiber/app/tests/unit/platform/: test_clock.py  test_config.py  test_logger.py  test_metrics.py
stacks/apps/fiber/app/tests/unit/repositories/: test_history.py
stacks/apps/fiber/app/tests/unit/routes/: test_dashboard_routes.py  test_health.py
stacks/apps/fiber/app/tests/unit/services/: test_dashboard.py  test_orchestrator.py  test_readiness.py  test_registry_state.py  test_worker_pool.py  test_worker_pool_start.py
stacks/apps/fiber/app/tools/: demo.py
stacks/apps/takeout-manager/manager/: Dockerfile  pyproject.toml
stacks/apps/takeout-manager/manager/backend/: __init__.py  application.py  containers.py  db.py  endpoints.py  logger.py  models.py  repositories.py  routes.py  services.py
stacks/apps/takeout-manager/manager/frontend/: README.md  index.html  package.json  vite.config.js
stacks/apps/takeout-manager/manager/frontend/src/: App.vue
stacks/apps/takeout-manager/manager/frontend/src/components/: CreateJob.vue  JobList.vue  JobModal.vue
stacks/apps/takeout-manager/manager/tests/integration/: test_api.py  test_repositories.py
stacks/apps/takeout-manager/manager/tests/unit/: test_repositories.py  test_services.py
stacks/apps/takeout-manager/worker/: Dockerfile  main.py  pyproject.toml
stacks/apps/takeout-manager/worker/tests/integration/: test_daemon_integration.py
stacks/apps/takeout-manager/worker/tests/unit/: test_daemon.py  test_logger.py  test_manager_client.py  test_runners.py  test_services.py
stacks/apps/takeout-manager/worker/worker/: __init__.py  containers.py  daemon.py  logger.py  manager_client.py  runners.py  services.py
stacks/apps/warden/app/: Dockerfile  pyproject.toml  sitecustomize.py
stacks/apps/warden/app/tests/: conftest.py  factories.py
stacks/apps/warden/app/tests/integration/: conftest.py  test_warden_e2e.py
stacks/apps/warden/app/tests/unit/: test_clock.py  test_config.py  test_database.py  test_logger.py  test_loop.py  test_metrics.py  test_schedule.py
stacks/apps/warden/app/tests/unit/clients/: test_arr.py  test_prowlarr.py
stacks/apps/warden/app/tests/unit/repositories/: test_backoff.py  test_efficacy.py  test_ledger.py  test_progress.py
stacks/apps/warden/app/warden/: clock.py  config.py  container.py  database.py  logger.py  loop.py  main.py  metrics.py  models.py  schedule.py
stacks/apps/warden/app/warden/clients/: arr.py  prowlarr.py
stacks/apps/warden/app/warden/repositories/: backoff.py  efficacy.py  ledger.py  progress.py
stacks/apps/warden/app/warden/routes/: health.py
stacks/apps/warden/app/warden/services/: backoff.py  efficacy.py  indexers.py  orchestrator.py  pacer.py  planner.py  progress.py  quota.py  quota_source.py  space.py  stale.py  sweeper.py
stacks/monitoring/custom-exporter/: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
stacks/monitoring/custom-exporter/iperf3_exporter/: __init__.py  __main__.py  metrics.py  runner.py  server.py
stacks/monitoring/custom-exporter/tests/: __init__.py  test_integration.py  test_runner.py
stacks/monitoring/custom-exporter/tests/integration/: test_integration.py
stacks/monitoring/custom-exporter/tests/unit/: test_main.py  test_metrics.py  test_runner_errors.py  test_server_run.py
tools/ci/: pyproject.toml
tools/ci/ci/: __init__.py  affected.py  apptests.py  cli.py  gc.py  release.py
tools/ci/tests/: test_affected.py  test_apptests.py  test_gc.py  test_release.py
(+447 files in other folders)
