[project]
name = "ci"
version = "0.1.0"
description = "Monorepo CI/build tooling: change detection and build helpers."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
# One CLI for the repo's build/test tooling: `ci affected`, `ci test`.
ci = "ci.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
