[tool.poetry]
name = "iperf3-exporter"
version = "0.1.0"
description = "A lightweight Prometheus exporter for iperf3 network performance metrics"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "iperf3_exporter"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
iperf3-exporter = "iperf3_exporter.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=iperf3_exporter",
    "--cov-report=term-missing",
    "--cov-report=html",
]
