[project]
name = "iperf3-exporter"
version = "0.1.0"
description = "A lightweight Prometheus exporter for iperf3 network performance metrics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
iperf3-exporter = "iperf3_exporter.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: needs external services (real process / fakes / docker)",
    "e2e: full black-box end-to-end (docker compose)",
]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=iperf3_exporter",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=75",
]
