[project]
name = "fiber"
version = "0.1.0"
description = "Label-driven database dump manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "dependency-injector>=4.42.0",
    "docker>=7.1.0",
    "croniter>=3.0.0",
    "prometheus-client>=0.21.0",
    "sqlmodel>=0.0.38",
    "sse-starlette>=3.4.4",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.8.0",
    "import-linter>=2.11",
    "pytest-cov>=7.1.0",
    "polyfactory>=3.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: needs external services (real process / fakes / docker)",
    "e2e: full black-box end-to-end (docker compose)",
]
addopts = "--strict-markers --cov=fiber --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["*/fiber/main.py", "*/fiber/container.py"]

[tool.importlinter]
root_package = "fiber"

[[tool.importlinter.contracts]]
name = "Circle Architecture rings"
type = "layers"
layers = ["fiber.routes", "fiber.services", "fiber.repositories", "fiber.clients"]
